Handle negative network quality values

In certain cases (e.g., when the device is offline), network
quality estimator (NQE) may emit negative network
quality values. This CL adds logic to handle those values:

In the manager class, if the estimate changes from an
unknown value to a know value, then the client is always
notified.

In the tracker class, handle notifications that
indicate that a metric is unavailable.

Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I2c82914e51c649a6b1b2e9b21682ebd4a193b138
Bug: 878893
Reviewed-on: https://chromium-review.googlesource.com/1196105
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588109}
Former-commit-id: 6b79159619c25649807573480eb9fa127514da15